--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A repository used to demonstrate API creation using NodeJS",
   "scripts": {
     "start": "node src/server.js",
+    "start-prod": "set NODE_ENV=prod&& node src/server.js",
     "test": "jest"
   },
   "repository": {
@@ -18,9 +19,12 @@
   },
   "homepage": "https://github.com/techreturners/api-lab-1-solution-javascript#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "eslint": "^8.2.0",
     "eslint-config-google": "^0.14.0",
     "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.9.0"
   },
   "devDependencies": {
